// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AppFooter /> > Default story renders snapshot 1`] = `
<footer
  class="_app-footer_693f0c _app-footer--emphasis-high_693f0c"
>
  <div
    class="_app-footer__wrapper_693f0c"
  >
    <div
      class="_app-footer__colophon_693f0c"
    >
      <div
        class="_app-footer__title_693f0c"
      >
        <div
          class="fpo h-[40px] w-[175px]"
        >
          Logo goes here
        </div>
      </div>
    </div>
    <menu
      class="_app-footer__nav-items_693f0c"
    >
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> > HighEmphasis story renders snapshot 1`] = `
<footer
  class="_app-footer_693f0c _app-footer--emphasis-high_693f0c"
>
  <div
    class="_app-footer__wrapper_693f0c"
  >
    <div
      class="_app-footer__colophon_693f0c"
    >
      <div
        class="_app-footer__title_693f0c"
      >
        <div
          class="fpo h-[40px] w-[175px]"
        >
          Logo goes here
        </div>
      </div>
      <div
        class="_text_b3eba3 _text--body-xs_b3eba3 _app-footer__copyright_693f0c"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="_app-footer__nav-items_693f0c"
    >
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> > LowEmphasis story renders snapshot 1`] = `
<footer
  class="_app-footer_693f0c _app-footer--emphasis-low_693f0c"
>
  <div
    class="_app-footer__wrapper_693f0c"
  >
    <menu
      class="_app-footer__nav-items_693f0c"
    >
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> > WithCopyright story renders snapshot 1`] = `
<footer
  class="_app-footer_693f0c _app-footer--emphasis-high_693f0c"
>
  <div
    class="_app-footer__wrapper_693f0c"
  >
    <div
      class="_app-footer__colophon_693f0c"
    >
      <div
        class="_app-footer__title_693f0c"
      >
        <div
          class="fpo h-[40px] w-[175px]"
        >
          Logo goes here
        </div>
      </div>
      <div
        class="_text_b3eba3 _text--body-xs_b3eba3 _app-footer__copyright_693f0c"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="_app-footer__nav-items_693f0c"
    >
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> > WithFooterLink story renders snapshot 1`] = `
<footer
  class="_app-footer_693f0c _app-footer--emphasis-high_693f0c"
>
  <div
    class="_app-footer__wrapper_693f0c"
  >
    <div
      class="_app-footer__colophon_693f0c"
    >
      <a
        aria-label="homepage"
        class="_app-footer__home-link_693f0c"
        href="http://example.org/"
      >
        <div
          class="_app-footer__title_693f0c"
        >
          <div
            class="fpo h-[40px] w-[175px]"
          >
            Logo goes here
          </div>
        </div>
      </a>
      <div
        class="_text_b3eba3 _text--body-xs_b3eba3 _app-footer__copyright_693f0c"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="_app-footer__nav-items_693f0c"
    >
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> > WithTextLogo story renders snapshot 1`] = `
<footer
  class="_app-footer_693f0c _app-footer--emphasis-high_693f0c"
>
  <div
    class="_app-footer__wrapper_693f0c"
  >
    <div
      class="_app-footer__colophon_693f0c"
    >
      <div
        class="_app-footer__title_693f0c"
      >
        Logo Ipsum, Inc.
      </div>
    </div>
    <menu
      class="_app-footer__nav-items_693f0c"
    >
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;

exports[`<AppFooter /> > WithTextLogoAndCopyright story renders snapshot 1`] = `
<footer
  class="_app-footer_693f0c _app-footer--emphasis-high_693f0c"
>
  <div
    class="_app-footer__wrapper_693f0c"
  >
    <div
      class="_app-footer__colophon_693f0c"
    >
      <a
        class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
        href="http://example.org/"
      >
        Logo Ipsum, Inc.
      </a>
      <div
        class="_text_b3eba3 _text--body-xs_b3eba3 _app-footer__copyright_693f0c"
      >
        Copyright © 2026
      </div>
    </div>
    <menu
      class="_app-footer__nav-items_693f0c"
    >
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#support"
        >
          Support
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#tos"
        >
          Terms of Use
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#privacy"
        >
          Privacy Policy
        </a>
      </li>
      <li
        class="_app-footer__nav-item_693f0c"
      >
        <a
          class="_link_d78ce8 _link--context-standalone_d78ce8 _link--emphasis-low_d78ce8 _link--size-xs_d78ce8 _link--variant-inverse_d78ce8"
          href="#guidelines"
        >
          Community Guidelines
        </a>
      </li>
    </menu>
  </div>
</footer>
`;
